--- a/Student_Data_Challenge.ipynb
+++ b/Student_Data_Challenge.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "# Create the path and import the data\n",
-    "full_student_data = '../Resources/new_full_student_data.csv'\n",
+    "full_student_data = 'Resources/new_full_student_data.csv'\n",
     "student_df = pd.read_csv(full_student_data)"
    ]
   },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "d94aa5d1",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
        "64.67573326141189"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "id": "ff0fd7cb",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
        "2    Wagner High School           89.0        70.4"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "id": "a3ee96e8-d653-44b1-811f-979880649046",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1297,7 @@
        "Chang High School                 171"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "id": "3e9018ab-17db-431d-98ef-0c7195b647bb",
    "metadata": {},
    "outputs": [
@@ -1398,7 +1398,7 @@
        "            12      63.568319"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,15 +1422,15 @@
    "id": "396f269c-7081-4e43-a203-0a2750b51fa4",
    "metadata": {},
    "source": [
-    "*your summary here*"
+    "The data illustrates that charter schools scored higher in math for grades 9, 10, 11, and 12. Charter schools received $38,570 less than public schools. It would have been helpful if that data illustrated the total student count by school type, and the average student to teacher ratio per school and school type."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "PythonData",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
